- Format number "000" for RGB - format Hex Value to 6 char. - Copy to clipboard when saving - fixing Primary Screen

--- a/PipetteLive/PipetteLive.vbproj
+++ b/PipetteLive/PipetteLive.vbproj
@@ -6,9 +6,9 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{8987F168-0585-4D46-9896-6E94EAD88487}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <StartupObject>PipetteLive.My.MyApplication</StartupObject>
-    <RootNamespace>PipetteLive</RootNamespace>
-    <AssemblyName>PipetteLive</AssemblyName>
+    <StartupObject>LivePipette.My.MyApplication</StartupObject>
+    <RootNamespace>LivePipette</RootNamespace>
+    <AssemblyName>Live Pipette</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>WindowsForms</MyType>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -22,7 +22,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>PipetteLive.xml</DocumentationFile>
+    <DocumentationFile>Live Pipette.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -32,7 +32,7 @@
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>PipetteLive.xml</DocumentationFile>
+    <DocumentationFile>Live Pipette.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
@@ -48,8 +48,7 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>
-    </ApplicationIcon>
+    <ApplicationIcon>Resources\pipette.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -88,6 +87,7 @@
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
       <DependentUpon>Application.myapp</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="My Project\Resources.Designer.vb">
       <AutoGen>True</AutoGen>
